--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "NLTK – Classical NLP processing (tokenization, parsing, etc.)\n",
     "\n",
-    "Gensim – Topic modeling and Word2Vec embeddings"
+    "Gensim – Topic modeling and Word2Vec embeddings."
    ]
   },
   {
